backend/config: rename PROMETHEUS_PORT/GRAFANA_PORT envs to APP_* to avoid k8s service var collision; k8s: add app-config ConfigMap and mount; ci(core): pass APP_* during backend import test

--- a/.github/workflows/core-cluster-deploy.yml
+++ b/.github/workflows/core-cluster-deploy.yml
@@ -77,6 +77,8 @@ jobs:
         MQTT_BROKER_HOST: localhost
         MQTT_BROKER_PORT: 1883
         REDIS_URL: redis://localhost:6379
+        APP_PROMETHEUS_PORT: 9090
+        APP_GRAFANA_PORT: 3000
 
     # Frontend 테스트
     - name: Set up Node.js
