--- a/backend/k8s/secrets.yaml
+++ b/backend/k8s/secrets.yaml
@@ -12,3 +12,12 @@ data:
   REDIS_URL: "redis://redis:6379"
   DEBUG: "false" 
   DIRECT_TIMESCALE_WRITE: "false"
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: app-config
+  namespace: smart-factory
+data:
+  APP_PROMETHEUS_PORT: "9090"
+  APP_GRAFANA_PORT: "3000"
