--- a/backend/k8s/smart-factory-apps.yaml
+++ b/backend/k8s/smart-factory-apps.yaml
@@ -72,6 +72,8 @@ spec:
         envFrom:
         - configMapRef:
             name: smart-factory-config
+        - configMapRef:
+            name: app-config
         resources:
           requests:
             memory: "512Mi"
