--- a/backend/k8s/smart-factory-apps.yaml
+++ b/backend/k8s/smart-factory-apps.yaml
@@ -243,6 +243,14 @@ spec:
           value: "1000"
         - name: SIM_MODE
           value: "both"
+        - name: SERVE_ML_PUBLISH
+          value: "true"
+        - name: SERVE_ML_FEATURE_TOPIC_BASE
+          value: "serve-ml"
+        - name: SIM_POWER
+          value: "11kW"
+        - name: SIM_MODEL_VERSION
+          value: "demo.v1"
         envFrom:
         - configMapRef:
             name: smart-factory-config
