feat(k8s/monitoring): Grafana 임베드/익명 뷰 허용 및 외부 URL 설정 연동\n\n- GF_SECURITY_ALLOW_EMBEDDING, GF_AUTH_ANONYMOUS_* 활성화\n- grafana-image-renderer 및 postgresql datasource 플러그인 설치\n- ConfigMap(app-config)에 APP_GRAFANA_EXTERNAL_URL 추가\n- 프론트 Deployment에 NEXT_PUBLIC_GRAFANA_BASE_URL을 ConfigMap에서 주입

--- a/backend/k8s/frontend-apps.yaml
+++ b/backend/k8s/frontend-apps.yaml
@@ -43,7 +43,10 @@ spec:
         - name: NEXT_PUBLIC_WEBSOCKET_URL
           value: "ws://smart-factory-backend:8000/api/v1/ws"
         - name: NEXT_PUBLIC_GRAFANA_BASE_URL
-          value: "http://grafana:3000"
+          valueFrom:
+            configMapKeyRef:
+              name: app-config
+              key: APP_GRAFANA_EXTERNAL_URL
         - name: NODE_ENV
           value: "production"
         resources:
