--- a/backend/k8s/secrets.yaml
+++ b/backend/k8s/secrets.yaml
@@ -21,3 +21,6 @@ metadata:
 data:
   APP_PROMETHEUS_PORT: "9090"
   APP_GRAFANA_PORT: "3000"
+  # 프론트에서 iframe 임베드할 외부 접근 URL (예: GKE LoadBalancer IP 또는 Ingress 도메인)
+  # 예시: http://34.64.xx.yy:3000 혹은 https://grafana.example.com
+  APP_GRAFANA_EXTERNAL_URL: "http://localhost:3000"
