docs(dev): README 접근 정보 보완 및 compose 설정 정리

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -65,6 +65,7 @@ services:
     environment:
       - MQTT_BROKER_HOST=mqtt
       - MQTT_BROKER_PORT=1883
+      - SIM_DEVICES=L-CAHU-01R,L-CAHU-03R,R-CAHU-01R,R-CAHU-02R,L-CAHU-01S,R-CAHU-01S,R-CAHU-03S,R-CAHU-02S,L-DEF-01,L-DSF-01,L-EF-04,L-SF-04,R-DEF-01,R-EF-03,R-EF-05,R-SF-03,L-CAHU-02S,R-PAC-01R,L-EF-01,L-EF-02,L-PAC-01,R-EF-01,R-PAHU-03S,L-PAHU-02S,L-SF-01,L-SF-02,R-SF-01,L-PAHU-03S,R-PAHU-04S,R-CAHU-03R,R-PAC-01S
       - SERVE_ML_ROOT=/app/serve_ml
     volumes:
       - ./serve_ml:/app/serve_ml:ro
