--- a/backend/k8s/secrets.yaml
+++ b/backend/k8s/secrets.yaml
@@ -22,5 +22,9 @@ data:
   APP_PROMETHEUS_PORT: "9090"
   APP_GRAFANA_PORT: "3000"
   # 프론트에서 iframe 임베드할 외부 접근 URL (예: GKE LoadBalancer IP 또는 Ingress 도메인)
-  # 예시: http://34.64.xx.yy:3000 혹은 https://grafana.example.com
+  # 예시: https://grafana.example.com (HTTPS 권장)
   APP_GRAFANA_EXTERNAL_URL: "http://localhost:3000"
+  # 프론트가 호출할 백엔드 외부 접근 URL들 (도메인/HTTPS 적용 시 여기만 변경)
+  # 예시: https://api.example.com/api/v1, wss://api.example.com/api/v1/ws
+  APP_BACKEND_EXTERNAL_BASE_URL: "https://factorypdm.com/api/v1"
+  APP_BACKEND_WS_URL: "wss://factorypdm.com/api/v1/ws"
