--- a/backend/k8s/smart-factory-apps.yaml
+++ b/backend/k8s/smart-factory-apps.yaml
@@ -12,7 +12,7 @@ spec:
     name: http
   selector:
     app: smart-factory-backend
-  type: LoadBalancer
+  type: ClusterIP
 
 ---
 apiVersion: apps/v1
