--- a/backend/k8s/monitoring.yaml
+++ b/backend/k8s/monitoring.yaml
@@ -209,19 +209,24 @@ data:
       type: prometheus
       access: proxy
       url: http://prometheus:9090
-      isDefault: true
     - name: TimescaleDB
+      uid: timescaledb-uid
       type: postgres
       access: proxy
+      isDefault: true
       url: timescaledb:5432
       database: ${POSTGRES_DB}
       user: ${POSTGRES_USER}
       secureJsonData:
         password: ${POSTGRES_PASSWORD}
       jsonData:
+        database: ${POSTGRES_DB}
         sslmode: disable
         postgresVersion: 1400
         timescaledb: true
+        connMaxLifetime: 14400
+        maxOpenConns: 100
+        maxIdleConns: 100
 
 ---
 apiVersion: v1
@@ -244,33 +249,205 @@ data:
   smart-factory-dashboard.json: |
     {
       "id": null,
-      "uid": "smart-factory-main",
-      "title": "스마트팩토리 예지보전 대시보드",
-      "tags": ["smart-factory", "predictive-maintenance"],
-      "timezone": "browser",
+      "title": "실시간 센서 데이터 대시보드 (메인)",
+      "tags": ["sensors", "realtime", "factory", "main"],
       "style": "dark",
-      "schemaVersion": 38,
-      "version": 1,
+      "timezone": "browser",
+      "templating": {
+        "list": [
+          {
+            "name": "device",
+            "type": "query",
+            "label": "Device",
+            "datasource": {"type": "postgres", "uid": "timescaledb-uid"},
+            "query": "SELECT DISTINCT device FROM sensor_data ORDER BY device",
+            "refresh": 2,
+            "includeAll": false,
+            "multi": false,
+            "current": {"text": "L-CAHU-01R", "value": "L-CAHU-01R"},
+            "hide": 0,
+            "sort": 0
+          }
+        ]
+      },
       "panels": [
         {
           "id": 1,
-          "title": "실시간 센서 데이터",
-          "type": "graph",
+          "title": "전류 센서 (x, y, z) - ${device}",
+          "type": "timeseries",
+          "gridPos": {"h": 10, "w": 12, "x": 0, "y": 0},
+          "datasource": {"type": "postgres", "uid": "timescaledb-uid"},
           "targets": [
-            { "expr": "sensor_value", "legendFormat": "{{sensor_id}}" }
+            {
+              "refId": "A",
+              "editorMode": "code",
+              "format": "time_series",
+              "rawQuery": true,
+              "rawSql": "SELECT time, sensor_type as metric, value FROM sensor_data WHERE device = '${device}' AND sensor_type IN ('x', 'y', 'z') AND time > NOW() - INTERVAL '5 minutes' ORDER BY time"
+            }
           ],
-          "yAxes": [ { "label": "값", "show": true } ],
-          "xAxes": [ { "show": true } ],
-          "gridPos": { "h": 8, "w": 12, "x": 0, "y": 0 }
+          "fieldConfig": {
+            "defaults": {
+              "color": {"mode": "palette-classic"},
+              "custom": {
+                "axisBorderShow": false,
+                "axisCenteredZero": false,
+                "axisColorMode": "text",
+                "axisLabel": "전류 (A)",
+                "axisPlacement": "auto",
+                "barAlignment": 0,
+                "drawStyle": "line",
+                "fillOpacity": 10,
+                "gradientMode": "none",
+                "hideFrom": {"tooltip": false, "viz": false, "legend": false},
+                "insertNulls": false,
+                "lineInterpolation": "linear",
+                "lineWidth": 1,
+                "pointSize": 5,
+                "scaleDistribution": {"type": "linear"},
+                "showPoints": "never",
+                "spanNulls": false,
+                "stacking": {"group": "A", "mode": "none"},
+                "thresholdsStyle": {"mode": "off"}
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {"color": "green", "value": null},
+                  {"color": "red", "value": 80}
+                ]
+              },
+              "unit": "short"
+            },
+            "overrides": [
+              {"matcher": {"id": "byName", "options": "x"}, "properties": [{"id": "color", "value": {"fixedColor": "red", "mode": "fixed"}}]},
+              {"matcher": {"id": "byName", "options": "y"}, "properties": [{"id": "color", "value": {"fixedColor": "green", "mode": "fixed"}}]},
+              {"matcher": {"id": "byName", "options": "z"}, "properties": [{"id": "color", "value": {"fixedColor": "blue", "mode": "fixed"}}]}
+            ]
+          },
+          "options": {
+            "legend": {"calcs": ["mean", "lastNotNull"], "displayMode": "list", "placement": "bottom", "showLegend": true},
+            "tooltip": {"mode": "multi", "sort": "none"}
+          }
         },
         {
           "id": 2,
-          "title": "이상탐지 알림",
-          "type": "stat",
-          "targets": [ { "expr": "anomaly_detected_total", "legendFormat": "이상탐지" } ],
-          "gridPos": { "h": 4, "w": 6, "x": 12, "y": 0 }
+          "title": "진동 센서 - ${device}",
+          "type": "timeseries",
+          "gridPos": {"h": 10, "w": 12, "x": 12, "y": 0},
+          "datasource": {"type": "postgres", "uid": "timescaledb-uid"},
+          "targets": [
+            {
+              "refId": "A",
+              "editorMode": "code",
+              "format": "time_series",
+              "rawQuery": true,
+              "rawSql": "SELECT time, 'vibration' as metric, value FROM sensor_data WHERE device = '${device}' AND sensor_type = 'vibe' AND time > NOW() - INTERVAL '5 minutes' ORDER BY time"
+            }
+          ],
+          "fieldConfig": {
+            "defaults": {
+              "color": {"mode": "palette-classic"},
+              "custom": {
+                "axisBorderShow": false,
+                "axisCenteredZero": false,
+                "axisColorMode": "text",
+                "axisLabel": "진동",
+                "axisPlacement": "auto",
+                "barAlignment": 0,
+                "drawStyle": "line",
+                "fillOpacity": 10,
+                "gradientMode": "none",
+                "hideFrom": {"tooltip": false, "viz": false, "legend": false},
+                "insertNulls": false,
+                "lineInterpolation": "linear",
+                "lineWidth": 2,
+                "pointSize": 5,
+                "scaleDistribution": {"type": "linear"},
+                "showPoints": "never",
+                "spanNulls": false,
+                "stacking": {"group": "A", "mode": "none"},
+                "thresholdsStyle": {"mode": "off"}
+              },
+              "mappings": [],
+              "thresholds": {
+                "mode": "absolute",
+                "steps": [
+                  {"color": "green", "value": null},
+                  {"color": "yellow", "value": 1.5},
+                  {"color": "red", "value": 2}
+                ]
+              },
+              "unit": "short"
+            },
+            "overrides": [
+              {"matcher": {"id": "byName", "options": "vibration"}, "properties": [{"id": "color", "value": {"fixedColor": "purple", "mode": "fixed"}}]}
+            ]
+          },
+          "options": {
+            "legend": {"calcs": ["mean", "max", "lastNotNull"], "displayMode": "list", "placement": "bottom", "showLegend": true},
+            "tooltip": {"mode": "multi", "sort": "none"}
+          }
+        },
+        {
+          "id": 3,
+          "title": "모든 디바이스 현재 상태",
+          "type": "table",
+          "gridPos": {"h": 8, "w": 24, "x": 0, "y": 10},
+          "datasource": {"type": "postgres", "uid": "timescaledb-uid"},
+          "targets": [
+            {
+              "refId": "A",
+              "editorMode": "code",
+              "format": "table",
+              "rawQuery": true,
+              "rawSql": "SELECT device, sensor_type, ROUND(AVG(value)::numeric, 3) as avg_value, ROUND(MAX(value)::numeric, 3) as max_value, ROUND(MIN(value)::numeric, 3) as min_value, COUNT(*) as count FROM sensor_data WHERE time > NOW() - INTERVAL '5 minutes' GROUP BY device, sensor_type ORDER BY device, sensor_type"
+            }
+          ],
+          "fieldConfig": {
+            "defaults": {
+              "custom": {"align": "auto", "cellOptions": {"type": "auto"}, "inspect": false},
+              "mappings": [],
+              "thresholds": {"mode": "absolute", "steps": [{"color": "green", "value": null}, {"color": "red", "value": 80}]}
+            },
+            "overrides": [
+              {"matcher": {"id": "byName", "options": "device"}, "properties": [{"id": "custom.width", "value": 150}]},
+              {"matcher": {"id": "byName", "options": "sensor_type"}, "properties": [{"id": "custom.width", "value": 100}]}
+            ]
+          },
+          "options": {"showHeader": true, "sortBy": [{"desc": false, "displayName": "device"}]}
+        },
+        {
+          "id": 4,
+          "title": "전체 디바이스 실시간 현황",
+          "type": "timeseries",
+          "gridPos": {"h": 10, "w": 24, "x": 0, "y": 18},
+          "datasource": {"type": "postgres", "uid": "timescaledb-uid"},
+          "targets": [
+            {
+              "refId": "A",
+              "editorMode": "code",
+              "format": "time_series",
+              "rawQuery": true,
+              "rawSql": "SELECT time, device || '_' || sensor_type as metric, value FROM sensor_data WHERE time > NOW() - INTERVAL '5 minutes' ORDER BY time"
+            }
+          ],
+          "fieldConfig": {
+            "defaults": {
+              "color": {"mode": "palette-classic"},
+              "custom": {"axisBorderShow": false, "axisCenteredZero": false, "axisColorMode": "text", "axisLabel": "", "axisPlacement": "auto", "barAlignment": 0, "drawStyle": "line", "fillOpacity": 5, "gradientMode": "none", "hideFrom": {"tooltip": false, "viz": false, "legend": false}, "insertNulls": false, "lineInterpolation": "linear", "lineWidth": 1, "pointSize": 5, "scaleDistribution": {"type": "linear"}, "showPoints": "never", "spanNulls": false, "stacking": {"group": "A", "mode": "none"}, "thresholdsStyle": {"mode": "off"}},
+              "mappings": [],
+              "thresholds": {"mode": "absolute", "steps": [{"color": "green", "value": null}]},
+              "unit": "short"
+            },
+            "overrides": []
+          },
+          "options": {"legend": {"calcs": [], "displayMode": "list", "placement": "right", "showLegend": true}, "tooltip": {"mode": "multi", "sort": "none"}}
         }
       ],
-      "time": { "from": "now-1h", "to": "now" },
-      "refresh": "5s"
+      "time": {"from": "now-5m", "to": "now"},
+      "refresh": "5s",
+      "schemaVersion": 30,
+      "version": 0
     }
