--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@sentry/nextjs": "^9.34.0",
     "@tanstack/react-query": "^5.81.5",
+    "d3": "^7.9.0",
     "framer-motion": "^12.23.0",
     "i18next": "23.11.5",
     "jsonwebtoken": "^9",
@@ -35,6 +36,7 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@types/d3": "^7.4.3",
     "@types/i18next": "^13.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
