chore(infra): update docker-compose and k8s manifests for simulator and monitoring
Adjust sensor-simulator interval and env; update monitoring/frontend apps and secrets manifests

--- a/backend/k8s/frontend-apps.yaml
+++ b/backend/k8s/frontend-apps.yaml
@@ -48,11 +48,7 @@ spec:
             configMapKeyRef:
               name: app-config
               key: APP_BACKEND_WS_URL
-        - name: NEXT_PUBLIC_GRAFANA_BASE_URL
-          valueFrom:
-            configMapKeyRef:
-              name: app-config
-              key: APP_GRAFANA_EXTERNAL_URL
+        # Grafana 환경변수 제거됨
         - name: NODE_ENV
           value: "production"
         resources:
