--- a/backend/k8s/secrets.yaml
+++ b/backend/k8s/secrets.yaml
@@ -20,10 +20,7 @@ metadata:
   namespace: smart-factory
 data:
   APP_PROMETHEUS_PORT: "9090"
-  APP_GRAFANA_PORT: "3000"
-  # 프론트에서 iframe 임베드할 외부 접근 URL (예: GKE LoadBalancer IP 또는 Ingress 도메인)
-  # 예시: https://grafana.example.com (HTTPS 권장)
-  APP_GRAFANA_EXTERNAL_URL: "http://localhost:3000"
+  # Grafana 제거됨
   # 프론트가 호출할 백엔드 외부 접근 URL들 (도메인/HTTPS 적용 시 여기만 변경)
   # 예시: https://api.example.com/api/v1, wss://api.example.com/api/v1/ws
   APP_BACKEND_EXTERNAL_BASE_URL: "https://factorypdm.com/api/v1"
