--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.40",
+    "@amcharts/amcharts4-geodata": "^4.1.31",
     "@fontsource/noto-sans-kr": "^5.0.7",
     "@fontsource/roboto": "^5.0.17",
     "@heroicons/react": "^2.2.0",
@@ -20,6 +22,7 @@
     "framer-motion": "^12.23.0",
     "i18next": "23.11.5",
     "jsonwebtoken": "^9",
+    "lucide-react": "^0.541.0",
     "next": "15.3.4",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.3.4",
