--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.81.5",
     "d3": "^7.9.0",
     "framer-motion": "^12.23.0",
+    "hls.js": "^1.6.10",
     "i18next": "23.11.5",
     "jsonwebtoken": "^9",
     "lucide-react": "^0.541.0",
