--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,9 +1,8 @@
 # Sample CCTV stream URLs
 NEXT_PUBLIC_CCTV_FACTORY_URL=https://media.example.com/app/factory.m3u8
-NEXT_PUBLIC_CCTV_MACHINE1_URL=https://media.example.com/app/L-CAHU-01R.m3u8
-NEXT_PUBLIC_CCTV_MACHINE2_URL=https://media.example.com/app/R-CAHU-01R.m3u8
+NEXT_PUBLIC_CCTV_FACTORY_ZONE_BASE_URL=https://media.example.com/app/factory-zone-
+NEXT_PUBLIC_CCTV_MACHINE_BASE_URL=https://media.example.com/app/
 
 # Example WebRTC WHEP endpoints
 # NEXT_PUBLIC_CCTV_FACTORY_URL=https://media.example.com/whep?app=factory&stream=overview
-# NEXT_PUBLIC_CCTV_MACHINE1_URL=https://media.example.com/whep?app=factory&stream=L-CAHU-01R
-# NEXT_PUBLIC_CCTV_MACHINE2_URL=https://media.example.com/whep?app=factory&stream=R-CAHU-01R
+# NEXT_PUBLIC_CCTV_MACHINE_BASE_URL=https://media.example.com/whep?app=factory&stream=
